post form, add react router and local storage

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Message Board</title>
+    <title>React App</title>
   </head>
   <body>
+    <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
   </body>
 </html>
